Navbar now matches the current page. Site is now responsive for phones.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"/>
 		<link rel="stylesheet" href="/styles.css" />
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
@@ -44,7 +45,7 @@
 				<img src="/images/pool.png"/>
 				<img src="/images/asteroidium.png"/>
 				<img src="/images/visionprecision.png"/>
-				<span style="display:block; text-align:center;" id="gameText">
+				<span class="centered" id="gameText">
 					<h2><strong>Check out these free games</strong></h2>
 					<h3><strong>that use JavaScript and are thus not allowed on this site!</strong></h3>
 				</span>
