--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"/>
 		<link rel="stylesheet" href="/styles.css" />
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
@@ -14,11 +15,11 @@
 		    </button>
 		    <div class="collapse navbar-collapse" id="navbarNav">
 		        <ul class="navbar-nav">
-		            <li class="nav-item active">
+		            <li class="nav-item">
 		                <a class="nav-link" href="/">Home</a>
 		            </li>
 		            <li class="nav-item">
-		                <a class="nav-link" href="#">About</a>
+		                <a class="nav-link active" href="#">About</a>
 		            </li>
 		            <li class="nav-item">
 		                <a class="nav-link" href="donate.html">Donate</a>
@@ -44,32 +45,6 @@
 				<p>Thank you for visiting this site! I started making these games when I was a high school sophomore, 15 years old. There will be two simulation based games, Asteroidium and Billiards, and one objective based game, Vision Precision. More games are in development beyond that, so stay tuned for more great content!</p>
 			</div>
 		</div>
-		<!--<span class="centered"><h1><strong>Jared Householder's Site</strong></h1></span>
-		<br>
-		<div id="gameImages">
-			<img src="/images/pool.png"/>
-			<img src="/images/asteroidium.png"/>
-			<img src="/images/visionprecision.png"/>
-			<span class="centered" id="gameText"><h2><strong>Check out these free games</h2><h3>that use JavaScript and are thus not allowed on this site!</strong></h3></span>
-		</div>
-
-		<div id="gameDescriptions">
-			<div>
-				<img src="/images/asteroidium.png"/>
-				<h3>Asteroidium</h3>
-				<p>Place or fling planets through the universe! From experimenting with the physics of gravity to firing entire galaxies at a time, this sandbox game is sure to suck hours of your life away!</p>
-			</div>
-			<div>
-				<img src="/images/pool.png"/>
-				<h3>Billiards</h3>
-				<p>This one is still in early testing, it's no more than ball collision physics at this point. Still pretty dang fun!</p>
-			</div>
-			<div>
-				<img src="/images/visionprecision.png"/>
-				<h3>Vision Precision</h3>
-				<p>Every color is just made up of red, green, and blue light. Can you figure out the right combinations to match the circle to the square?</p>
-			</div>
-		</div>-->
 		<footer>
 			<span class="centered"><a href="https://github.com/Howzieky/creativeproject1.git">Github Link</a></span>
 		</footer>
