--- a/games/billiards/index.html
+++ b/games/billiards/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"/>
 		<link rel="stylesheet" href="/styles.css" />
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
@@ -14,22 +15,22 @@
 		    </button>
 		    <div class="collapse navbar-collapse" id="navbarNav">
 		        <ul class="navbar-nav">
-		            <li class="nav-item active">
+		            <li class="nav-item">
 		                <a class="nav-link" href="/">Home</a>
 		            </li>
 		            <li class="nav-item">
 		                <a class="nav-link" href="/about.html">About</a>
 		            </li>
 		            <li class="nav-item">
-		                <a class="nav-link" href="donate.html">Donate</a>
+		                <a class="nav-link" href="/donate.html">Donate</a>
 		            </li>
 					<li class="nav-item dropdown">
 			        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			          Games
 			        </a>
-			        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+			        <div class="dropdown-menu active" aria-labelledby="navbarDropdown">
 					  <a class="dropdown-item" href="/games/asteroidium">Asteroidium</a>
-  			          <a class="dropdown-item" href="/games/billiards">Billiards</a>
+  			          <a class="dropdown-item active" href="/games/billiards">Billiards</a>
   			          <a class="dropdown-item" href="/games/visionprecision">Vision Precision</a>
 			        </div>
 			      </li>
