--- a/games/asteroidium/index.html
+++ b/games/asteroidium/index.html
@@ -5,11 +5,13 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"/>
 		<link rel="stylesheet" href="/styles.css" />
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
 		<title>JH - Creative Project 1</title>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		    <a class="navbar-brand" href="#">JDH Codelab</a>
+		    <a class="navbar-brand" href="#"> JDH Codelab<span style="Roboto Mono"> </span></a>
 		    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 		        <span class="navbar-toggler-icon"></span>
 		    </button>
@@ -41,8 +43,9 @@
 		<div id="mainContent">
 			<span class="centered"><h1><strong>Asteroidium</strong></h1></span>
 			<span id="gameBoxStuff" >
-				<img id="game" class="unavailableGame" src="/images/asteroidium.png"/>
-				<span class="centered" id="gameText"><h2><strong>Asteroidium uses JavaScript.</h2><h3>Come back later!</strong></h3></span>
+				<canvas id="game"/>
+				<!--<img id="game" class="unavailableGame" src="/images/asteroidium.png"/>
+				<span class="centered" id="gameText"><h2><strong>Asteroidium uses JavaScript.</h2><h3>Come back later!</strong></h3></span>-->
 			</span>
 		</div>
 
@@ -68,5 +71,8 @@
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+			<script src="js/csscolorparser.js"></script>
+			<script src="js/gameLib.js"></script>
+			<script src="js/asteroidium.js"></script>
 	</body>
 </html>
