Made it responsive. Added a button to call my old API to get planet presets. Only 5 presets available because I couldn't figure out sending POST data through fetch(). Other game pages now say when they'll be updated with games.

--- a/games/asteroidium/index.html
+++ b/games/asteroidium/index.html
@@ -43,10 +43,13 @@
 		<div id="mainContent">
 			<span class="centered"><h1><strong>Asteroidium</strong></h1></span>
 			<span id="gameBoxStuff" >
-				<canvas id="game"/>
+				<canvas id="game"></canvas>
+				<span class="centered" id="gameText"><h2><strong>Asteroidium only works on Desktop.</strong></h2></span>
 				<!--<img id="game" class="unavailableGame" src="/images/asteroidium.png"/>
 				<span class="centered" id="gameText"><h2><strong>Asteroidium uses JavaScript.</h2><h3>Come back later!</strong></h3></span>-->
 			</span>
+
+			<div id="randomPreset">Get Random Preset from Database</div>
 		</div>
 
 		<div id="gameDescriptions" class="dark gamePage">
