--- a/games/billiards/index.html
+++ b/games/billiards/index.html
@@ -42,7 +42,7 @@
 			<span class="centered"><h1><strong>Billiards</strong></h1></span>
 			<span id="gameBoxStuff" >
 				<img id="game" class="unavailableGame" src="/images/pool.png"/>
-				<span class="centered" id="gameText"><h2><strong>Billiards uses JavaScript.</h2><h3>Come back later!</strong></h3></span>
+				<span class="centered futureGame" id="gameText"><h2><strong>Billiards will be added in the next update.</h2><h3>Come back later!</strong></h3></span>
 			</span>
 		</div>
 
