--- a/games/visionprecision/index.html
+++ b/games/visionprecision/index.html
@@ -42,7 +42,7 @@
 			<span class="centered"><h1><strong>Vision Precision</strong></h1></span>
 			<span id="gameBoxStuff" >
 				<img id="game" class="unavailableGame" src="/images/visionprecision.png"/>
-				<span class="centered" id="gameText"><h2><strong>Vision Precision uses JavaScript.</h2><h3>Come back later!</strong></h3></span>
+				<span class="centered futureGame" id="gameText"><h2><strong>Vision Precision will be added in two updates.</h2><h3>Come back later!</strong></h3></span>
 			</span>
 		</div>
 
