Fixed a little bit of CSS

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 				<img src="/images/pool.png"/>
 				<img src="/images/asteroidium.png"/>
 				<img src="/images/visionprecision.png"/>
-				<span class="centered" id="gameText">
-					<h2><strong>Check out these free games</strong></h2>
-					<h3><strong>that use JavaScript and are thus not allowed on this site!</strong></h3>
+				<span class="centered futureGame" id="gameText">
+					<h2><strong>Check out these free games!</strong></h2>
+					<!--<h3><strong>that use JavaScript and are thus not allowed on this site!</strong></h3>-->
 				</span>
 			</div>
 		</div>
